js/js.translator/testData/incremental/invalidation/typeScriptExportsPerModule/main/m.1.d.ts
type Nullable<T> = T | null | undefined
export declare function foo(): number;
export declare function box(stepId: number, isWasm: boolean): string;